--- a/.gitconfig
+++ b/.gitconfig
@@ -11,6 +11,7 @@
 	pager = diff-so-fancy | less --tabs=4 -RFX
 [push]
 	default = matching
+	recurseSubmodules = no
 [diff]
 	tool = vimdiff
 [difftool]
@@ -61,6 +62,10 @@
 	autosquash = true
 [credential]
 	helper = store
+[submodule]
+	recurse = true
+[pull]
+	ff = only
 [filter "lfs"]
 	clean = git-lfs clean -- %f
 	smudge = git-lfs smudge -- %f
